Rename cypherlot references to cipherlot

--- a/src/content/docs/00-getting-started/hello-world.mdx
+++ b/src/content/docs/00-getting-started/hello-world.mdx
@@ -2,7 +2,7 @@
 title: "Hello, Journal"
 kind: tutorial
 spec_ref: ["rfc-0001-core"]
-summary: "Create a sandbox Cypherlot Vault and explore the developer workflow."
+summary: "Create a sandbox Cipherlot Vault and explore the developer workflow."
 date: 2025-01-20
 tags: ["getting-started", "vault"]
 version: "current"
@@ -13,7 +13,7 @@ weight: 0
 
 ## Goal
 
-By the end of this tutorial you will have a local Vault and client exchanging encrypted messages using the core Cypherlot protocol.
+By the end of this tutorial you will have a local Vault and client exchanging encrypted messages using the core Cipherlot protocol.
 
 ## Prerequisites
 
