--- a/src/content/docs/10-how-to/connect-a-client.mdx
+++ b/src/content/docs/10-how-to/connect-a-client.mdx
@@ -50,4 +50,4 @@ weight: 20
 ## See also
 
 - [Hello, Journal](/docs/00-getting-started/hello-world)
-- [Cypherlot Core Protocol](/specs/rfc-0001-core)
+- [Cipherlot Core Protocol](/specs/rfc-0001-core)
