--- a/src/content/docs/10-how-to/run-a-vault-locally.mdx
+++ b/src/content/docs/10-how-to/run-a-vault-locally.mdx
@@ -9,7 +9,7 @@ version: "current"
 weight: 10
 ---
 
-> This guide is **informative** and does not define conformance. Normative requirements live in the Cypherlot specifications.
+> This guide is **informative** and does not define conformance. Normative requirements live in the Cipherlot specifications.
 
 ## Prerequisites
 
