--- a/src/content/docs/20-explanations/threat-model-overview.mdx
+++ b/src/content/docs/20-explanations/threat-model-overview.mdx
@@ -2,7 +2,7 @@
 title: "Threat model overview"
 kind: explanation
 spec_ref: ["rfc-0001-core"]
-summary: "Understand the adversaries Cypherlots are designed to resist."
+summary: "Understand the adversaries Cipherlots are designed to resist."
 date: 2025-01-22
 tags: ["threat-model", "security"]
 version: "current"
@@ -11,7 +11,7 @@ weight: 5
 
 > Explanatory content only; for binding requirements read the Security Considerations sections of the specs.
 
-Cypherlots assume a world where metadata surveillance is the default. Implementers must understand who we defend against and where the limits lie.
+Cipherlots assume a world where metadata surveillance is the default. Implementers must understand who we defend against and where the limits lie.
 
 ## Primary adversaries
 
@@ -31,4 +31,4 @@ Cypherlots assume a world where metadata surveillance is the default. Implemente
 - Capability tokens for least-privilege access.
 - Vault-to-client ratchets for forward secrecy.
 
-Continue with the [Cypherlot Core Protocol](/specs/rfc-0001-core) for normative requirements.
+Continue with the [Cipherlot Core Protocol](/specs/rfc-0001-core) for normative requirements.
